# learning

./: README.md  apko.yaml  docker-bake.hcl  justfile
.github/: dependabot.yml
.github/apko/: baseimage-dev.yaml  baseimage.yaml
.github/workflows/: baseimage.yaml  trivy.yaml
.opencode/: opencode.json
api/: .env.example  Dockerfile  alembic.ini  dev.py  pyproject.toml  stress_test.py
api/alembic/: env.py
api/alembic/versions/: 41742ed48865_create_initial_tables.py
api/app/: config.py  database.py  logger.py  main.py  models.py  telemetry.py
api/app/queries/: posts.py  users.py
api/app/routers/: posts.py  users.py
cue/api/: config.cue  configmap.cue  deployment.cue  secret.cue  service.cue  servicemonitor.cue  sidecar.cue  stream.cue
cue/definitions/: deployment.cue  postgres.cue
cue/definitions/istio/: import-crds.sh
cue/definitions/promethues_operator/: promethues-operator.cue
cue/platform/: config.cue  istio-scrape.cue  namespace.cue  postgres.cue  secret.cue  stream.cue
iac/grafana/: .terraform.lock.hcl  README.md  data.tf  main.tf  provider.tf
iac/grafana/.opencode/: opencode.json
k8s/apps/api/: config.cue  configmap.cue  deployment.cue  namespace.cue  secret.cue  service.cue  servicemonitor.cue  sidecar.cue  stream.cue
k8s/base/: deployment.cue  postgres.cue
k8s/base/crds/: README.md  import-crds.sh
k8s/cue.mod/: module.cue
k8s/helm/istiod/: values.yaml
k8s/platform/: config.cue  istio-scrape.cue  namespaces.cue  postgres-service.cue  postgres.cue  postgres_service.cue  secret.cue  stream.cue
values/: promethues-stack.yaml
(+84 files in other folders)
