[project]
name = "api"
version = "0.1.0"
description = "FastAPI + PostgreSQL with raw SQL"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "sqlmodel>=0.0.30",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "alembic>=1.17.2",
    "python-dotenv>=1.2.1",
]
